[ECMA-402] Intl.DateTimeFormat dateStyle/timeStyle missing in WebKit https://bugs.webkit.org/show_bug.cgi?id=209776

Reviewed by Darin Adler and Ross Kirsling.

JSTests:

* stress/intl-date-time-format-date-time-style-basic.js: Added.
(shouldBe):
(shouldBe.o.format):
* stress/intl-date-time-format-date-time-style-hour-cycle.js: Added.
(shouldBe):
(shouldBe.o.format):
* stress/intl-date-time-style-option-consistency.js: Added.
(shouldThrow):
(value.of.Object.entries):
* test262/config.yaml:
* test262/expectations.yaml:

Source/JavaScriptCore:

This patch implements Intl.DateTimeFormat dateStyle and timeStyle options. When it is specified,
we query the best date-time format with these options to ICU instead of configuring each date-time
formats.

Since ECMA402 requires enforcement of hourCycle specified from the option, even if ICU ignores that.
So, after getting the appropriate pattern from ICU, we modify this pattern and re-create UDateFormat
from the modified pattern.

* builtins/DatePrototype.js:
(toLocaleString.toDateTimeOptionsAnyAll):
(toLocaleString):
(toLocaleDateString.toDateTimeOptionsDateDate):
(toLocaleDateString):
(toLocaleTimeString.toDateTimeOptionsTimeTime):
(toLocaleTimeString):
* runtime/CommonIdentifiers.h:
* runtime/IntlDateTimeFormat.cpp:
(JSC::toDateTimeOptionsAnyDate):
(JSC::IntlDateTimeFormat::initializeDateTimeFormat):
(JSC::IntlDateTimeFormat::formatStyleString):
(JSC::IntlDateTimeFormat::resolvedOptions const):
* runtime/IntlDateTimeFormat.h:

Canonical link: https://commits.webkit.org/228512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266035 268f45cc-cd09-0410-ab3c-d52691b4dbfc